# BasePopup

lib/: build.gradle
lib/src/main/cpp/: CMakeLists.txt  PopupNdkHook.cpp
lib/src/main/java/razerdp/basepopup/: BasePopupWindowProxy.java
lib/src/main/java/razerdp/hook/: PopupReflectionHelper.java
